Support separate transactions per email attachment
Preserve immutable Flyway history with a forward V18 migration and add attachment-level parsing, deduplication, review, and regression coverage.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>